# spu

sml/opttest/: BUILD.bazel  mixmul.py  rsqrt.py
sml/opttest/emulations/: BUILD.bazel  rsqrt_emul.py
sml/opttest/tests/: BUILD.bazel  mixmul_test.py  rsqrt_test.py
sml/preprocessing/: preprocessing.py
sml/preprocessing/emulations/: preprocessing_emul.py
sml/preprocessing/tests/: preprocessing_test.py
